[package]
name = "turto"
version = "1.2.1"
edition = "2021"
authors = ["phoxwupsh"]
rust-version = "1.80"
license = "MIT"
repository = "https://github.com/phoxwupsh/turto"
description = "turto is a simple, easy-to-use and customizable Discord music bot, especially suitable for self-hosting."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = "2.5.2"
serde = "1.0.210"
serde_json = "1.0.128"
regex = "1.11.0"
toml = "0.8.19"
rand = "0.8.5"
sha256 = "1.5.0"
which = "6.0.3"
reqwest = "0.11.22"
poise = "0.6.1"
anyhow = "1.0.89"
tracing-appender = "0.2.3"
chrono = "0.4.38"

[dependencies.serenity]
version = "0.12.2"
features = [
    "client",
    "standard_framework",
    "cache",
    "voice",
    "rustls_backend",
    "collector",
]

[dependencies.tokio]
version = "1.40.0"
features = ["macros", "rt-multi-thread", "signal"]

[dependencies.songbird]
version = "0.4.3"

[dependencies.dashmap]
version = "6.1.0"
features = ["serde"]

[dependencies.symphonia]
version = "0.5.4"
features = ["mp3", "aac", "vorbis", "isomp4"]

[profile.release]
opt-level = 3
lto = true
strip = true